Fix replace List.getFirst with List.get(0) for compatibility
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>